# notetui

./: Cargo.toml  DESIGN.md  README.md
src/: main.rs
