[package]
name = "notetui"
version = "0.1.0"
edition = "2021"
description = "Terminal (TUI) Misskey client built on the notecli library"
repository = "https://github.com/hitalin/notetui"
license = "MIT"

[dependencies]
# Core Misskey client/library. Same crate NoteDeck consumes — TUI is just
# another frontend over it, kept in its own repo per notecli's architecture.
notecli = { path = "../notecli" }
ratatui = "0.29"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
anyhow = "1"
# Resolve the same data dir notecli/notedeck use, so we share the account DB.
dirs = "6"
